# gme_shorts

./: .gitignore  Dockerfile  docker-compose.yml  gunicorn.conf.py  pyproject.toml  wsgi.py
gme_shorts/: app.py  etfs
gme_shorts/static/: main.js
gme_shorts/templates/: index.html
nginx/: Dockerfile  app.conf  nginx.conf
tests/: test_gme_shorts.py
